--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ImagesOnScroll</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="wrapper"></div>    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper"></div>
+    <div class="box"></div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
