--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ImagesOnScroll</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="wrapper"></div>
-    <div class="box"></div>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="wrapper"></div>    
 
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
