--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper"></div>    
-
+    <div class="box"></div>
     <script src="script.js"></script>
 </body>
 </html>
